some updates to chap 4

--- a/chap1.tex
+++ b/chap1.tex
@@ -93,12 +93,12 @@ Explain what a laser stands for, stimulated emission, lasing medium, what the Ti
 %
 %A footnote\footnote{Another foot.}
 
-\section{Ion Acceleration}
+\section{High Energy Density Science}
 
-\subsection{Common Acceleration Methods}
+\subsection{Fusion}
 
 
-\subsection{Applications}
+\subsection{Particle Acceleration}
 
 
 \section{This Work}
