--- a/exp.bib
+++ b/exp.bib
@@ -206,6 +206,21 @@
 	eprint = {https://pubs.aip.org/aip/pop/article-pdf/5/5/1966/19229898/1966\_1\_online.pdf},
 }
 
+@article{Grimes_1999_PRL,
+	title = {Experimental Identification of ``Vacuum Heating'' at Femtosecond-Laser-Irradiated Metal Surfaces},
+	author = {Grimes, M. K. and Rundquist, A. R. and Lee, Y.-S. and Downer, M. C.},
+	journal = {Phys. Rev. Lett.},
+	volume = {82},
+	issue = {20},
+	pages = {4010--4013},
+	numpages = {0},
+	year = {1999},
+	month = {May},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevLett.82.4010},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.82.4010}
+}
+
 
 
 
