--- a/chap2.tex
+++ b/chap2.tex
@@ -301,7 +301,7 @@ Expansion models have been long known since the 70s and 80s (e.g. Crowe\cite{Cro
 
 The field of ultra-intense proton acceleration kicked off in the year of 2000 with a group at Michigan\cite{Maksimchuk_2000_PRL} finding 1.6 MeV protons from a thin aluminum foil with a $\SI{3e18}{\watt \per \centi \meter \squared}$ class laser at normal incidence. Then, Rutherford Appleton Laboratory found 30 MeV protons\cite{Clark_2000_PRL} from a $\SI{5e19}{\watt \per \centi \meter \squared}$ class laser incident on a lead target at $45^\circ$ incidence. Shortly after, LLNL found energies up to 58MeV\cite{Snavely_2000_PRL} from a $\SI{3e20}{\watt \per \centi \meter \squared}$ class laser on a gold target at $45^\circ$ incidence.
 
-Now that efficient MeV proton acceleration had been achieved through multiple studies, a more thorough comprehensive picture of the physical process was desired. In 2001, Wilks\cite{Wilks_2001_PoP} summarized much of the existing literature including the isothermal expansion model\cite{Crow_1975_JPP}, existence of a maximum cutoff energy\cite{Kishimoto_1983_PoF}, and dependence on hot temperature $\cite{Wilks_1992_PRL}$. Then, he described the Target Normal Sheath Acceleration process in the following way\cite{Wilks_2001_PoP}
+Now that efficient MeV proton acceleration had been achieved through multiple studies, a more thorough comprehensive picture of the physical process was desired. In 2001, Wilks\cite{Wilks_2001_PoP} summarized much of the existing literature including the isothermal expansion model\cite{Crow_1975_JPP}, existence of a maximum cutoff energy\cite{Kishimoto_1983_PoF}, and dependence on hot temperature \cite{Wilks_1992_PRL}. Then, he described the Target Normal Sheath Acceleration process in the following way\cite{Wilks_2001_PoP}
 
 \begin{quote}
 	... the prepulse creates large plasma in front of a solid target. Once the main pulse hits the target, a cloud of energetic electrons (1-10 MeV in effective temperature) is generated, which extends past the ions on both the front and back of the target. Since the protons on the back are in a sharp, flat density gradient, they are accelerated quickly (in the first few $\mu m$ off the target) to high energies in the forward direction ... On the front, the outermost ions are in a sphere, in a long scale length plasma (due to prepulse) and therefore are accelerated to lower energies, and are spread out into $2 \pi$ steradians.
