--- a/pic.bib
+++ b/pic.bib
@@ -31,3 +31,18 @@
 	adsurl = {http://adsabs.harvard.edu/abs/2010PhPl...17e6702K},
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{Arber_2015_PPCF,
+	doi = {10.1088/0741-3335/57/11/113001},
+	url = {https://dx.doi.org/10.1088/0741-3335/57/11/113001},
+	year = {2015},
+	month = {sep},
+	publisher = {IOP Publishing},
+	volume = {57},
+	number = {11},
+	pages = {113001},
+	author = {T D Arber and K Bennett and C S Brady and A Lawrence-Douglas and M G Ramsay and N J Sircombe and P Gillies and R G Evans and H Schmitz and A R Bell and C P Ridgers},
+	title = {Contemporary particle-in-cell approach to laser-plasma modelling},
+	journal = {Plasma Physics and Controlled Fusion},
+	abstract = {Particle-in-cell (PIC) methods have a long history in the study of laser-plasma interactions. Early electromagnetic codes used the Yee staggered grid for field variables combined with a leapfrog EM-field update and the Boris algorithm for particle pushing. The general properties of such schemes are well documented. Modern PIC codes tend to add to these high-order shape functions for particles, Poisson preserving field updates, collisions, ionisation, a hybrid scheme for solid density and high-field QED effects. In addition to these physics packages, the increase in computing power now allows simulations with real mass ratios, full 3D dynamics and multi-speckle interaction. This paper presents a review of the core algorithms used in current laser-plasma specific PIC codes. Also reported are estimates of self-heating rates, convergence of collisional routines and test of ionisation models which are not readily available elsewhere. Having reviewed the status of PIC algorithms we present a summary of recent applications of such codes in laser-plasma physics, concentrating on SRS, short-pulse laser-solid interactions, fast-electron transport, and QED effects.}
+}
