--- a/template.tex
+++ b/template.tex
@@ -152,8 +152,8 @@
 % if you believe their guidelines; however, conversations with GS
 % staff suggests _they don't care_. Go figure. So do what you like.
 
-%\appendix
-%\include{app1}
+\appendix
+\include{app1}
 %\include{app2}
 
 \end{document}
