--- a/pic.bib
+++ b/pic.bib
@@ -17,6 +17,22 @@
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Welch_2004_LSP,
+	title = {Implementation of an non-iterative implicit electromagnetic field solver for dense plasma simulation},
+	journal = {Computer Physics Communications},
+	volume = {164},
+	number = {1},
+	pages = {183-188},
+	year = {2004},
+	note = {Proceedings of the 18th International Conferene on the Numerical Simulation of Plasmas},
+	issn = {0010-4655},
+	doi = {https://doi.org/10.1016/j.cpc.2004.06.028},
+	url = {https://www.sciencedirect.com/science/article/pii/S0010465504002784},
+	author = {D.R. Welch and D.V. Rose and R.E. Clark and T.C. Genoni and T.P. Hughes},
+	keywords = {Particle simulation, Implicit field solver},
+	abstract = {The implementation of an implicit electromagnetic field solver in the particle-in-cell code Lsp is presented. This solver is adapted for use in dense plasma simulation through the direct implicit scheme. The new implicit field solver involves two half-timestep field advances with convenient time centering for the ∇×E and ∇×B terms. Although making use of the alternating direct implicit technique, the new solution technique is faster because no iterations are required.}
+}
+
 @ARTICLE{LePape_2009_OL,
 	author = {{Le Pape}, A.~J. and {Tsui}, Y.~Y. and {Macphee}, A. and {Hey}, D. and {Pravesh}, P. and {Makinnon}, A. and {Key}, M. and {Wei}, M. and {Ma}, T. and {Beg}, F. and {Stephens}, R. and {Akli}, K. U. and {Link}, A. J. and {Van Woerkom}, L. and {Freeman}, R. R.},
 	title = "{Characterization of the preformed plasma for high-intensity laser-plasma interaction}",
